# bc_python_aula17

./: README.md  desafio.db  desafio_draft.py  exemplo_01.py  exemplo_03.py  meudb.db  pyproject.toml
samples/: exemplo_02.py
src/: controller.py  desafio.py  main.py
src/data/: class_fornecedor.py  class_produto.py  connect.py  db.py
src/data/models/: fornecedor.py  produto.py
